--- a/IIFYM_Tracker/src/main/res/layout/activity_view_saved_meals.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_view_saved_meals.xml
@@ -1,54 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Activities.Main.ViewSavedMealsActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="8dp">
+    <EditText
+        android:layout_width="360dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/EditText_MealSearch"
+        android:hint="Search Meals ..."
+        android:drawableLeft="?android:attr/actionModeWebSearchDrawable"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:clickable="true"
+        app:srcCompat="@drawable/icon_addnewmeal"
+        android:id="@+id/addmeal_fab"
+        app:backgroundTint="?attr/colorPrimaryDark"
+        app:fabSize="mini"
+        android:layout_width="75dp"
+        app:elevation="10dp"
+        app:rippleColor="@android:color/black"
+        android:layout_height="75dp"
+        app:layout_constraintRight_toRightOf="@+id/ListView_SavedMeals"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/EditText_MealSearch"
-            android:hint="Search Meals ..."
-            android:drawableLeft="?android:attr/actionModeWebSearchDrawable" />
-
-        <ListView
+    <ListView
         android:layout_width="wrap_content"
         android:id="@+id/ListView_SavedMeals"
-            android:layout_height="354dp"
-            android:layout_weight="1">
-        </ListView>
-
-        <android.support.design.widget.FloatingActionButton
-            android:layout_height="match_parent"
-            android:clickable="true"
-            app:srcCompat="@drawable/icon_addnewmeal"
-            android:id="@+id/addmeal_fab"
-            app:backgroundTint="?attr/colorPrimaryDark"
-            android:layout_gravity="bottom|right"
-            app:fabSize="mini"
-            android:layout_width="75dp"
-            app:elevation="10dp"
-            app:rippleColor="@android:color/black" />
-
-    </LinearLayout>
+        android:layout_height="0dp"
+        tools:layout_editor_absoluteY="45dp"
+        tools:layout_editor_absoluteX="0dp"></ListView>
 
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
