Revamped content_home.xml

--- a/IIFYM_Tracker/src/main/res/values/colors.xml
+++ b/IIFYM_Tracker/src/main/res/values/colors.xml
@@ -10,12 +10,10 @@
     <color name="black">#000000</color>
     <color name="black_light">#333</color>
     <color name="grey_light">#A1A1A1</color>
-    <color name="CarbProgressColor">#ffb74d</color>
-    <color name="CarbSecondaryProgressColor">#f57c00</color>
+    <color name="CaloriesProgessColor">#f0c419</color>
+    <color name="CarbProgressColor">#f57c00</color>
     <color name="ProteinProgessColor">#f44336</color>
-    <color name="ProteinSecondaryProgressColor">#cc0000</color>
     <color name="FatProgessColor">#66bb6a</color>
-    <color name="FatSecondaryProgressColor">#2e7d32</color>
     <color name="Progress_Bar_Background">#e0e0e0</color>
     <color name="Transparent">#00ffffff</color>
     <color name="LoginScreen_Backgroud">#ffffff</color>
@@ -25,4 +23,10 @@
     <color name="Custom_Red">#D50000</color>
     <color name="Custom_Green">#2E7D32</color>
     <color name="Custom_Grey">#808080</color>
+    <!--<color name="CarbProgressColor">#ffb74d</color>-->
+    <!--<color name="CarbSecondaryProgressColor">#f57c00</color>-->
+    <!--<color name="ProteinProgessColor">#f44336</color>-->
+    <!--<color name="ProteinSecondaryProgressColor">#cc0000</color>-->
+    <!--<color name="FatProgessColor">#66bb6a</color>-->
+    <!--<color name="FatSecondaryProgressColor">#2e7d32</color>-->
 </resources>
