--- a/IIFYM_Tracker/src/main/res/layout/activity_launcher.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_launcher.xml
@@ -17,21 +17,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/progressbarLoading"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.4"
-        android:layout_height="140dp" />
-
-    <ProgressBar
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressbarLoading"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="136dp" />
+        android:layout_marginBottom="16dp"
+        app:layout_constraintVertical_bias="0.39"
+        android:layout_height="140dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
